- updated from Broadcast.get_text() to Broadcast.get_translation["text"] (for views) and translation.text and translation.attachments (for templates) accordingly:    - Broadcast __repr__    - broadcast_scheduled_read_spa.haml    - broadcast_scheduled_read.haml    - msg_outbox_spa.haml    - msg_outbox.haml - re-ran code checks

--- a/templates/msgs/broadcast_scheduled_read.haml
+++ b/templates/msgs/broadcast_scheduled_read.haml
@@ -13,18 +13,22 @@
     %table.list(style='{% if not org_perms.msgs.broadcast_send %}margin-top:10px{% endif %}')
       %tbody
         -for object in send_history
-          %tr
-            %td
-              -with recipient_count=object.get_message_count
-                -blocktrans trimmed count counter=recipient_count with count_comma=recipient_count|intcomma
-                  {{ count_comma }} recipient
-                -plural
-                  {{ count_comma }} recipients
-            %td
-              {{ object.get_text }}
-            %td
-              %nobr
-                {% short_datetime object.created_on %}
+          -with translation=object.get_translation
+            %tr
+              %td
+                -with recipient_count=object.get_message_count
+                  -blocktrans trimmed count counter=recipient_count with count_comma=recipient_count|intcomma
+                    {{ count_comma }} recipient
+                  -plural
+                    {{ count_comma }} recipients
+              %td
+                {{ object.get_text }}
+              %td.value-attachments{ style:"margin-top: 5px" }
+                -for attachment in translation.attachments
+                  {% attachment_button attachment %}
+              %td
+                %nobr
+                  {% short_datetime object.created_on %}
 
     .mx-8
       -block paginator
