- updated broadcast_scheduled_read.haml to reference translation instead of object - added compose_serialize and compose_deserialize to compose.py to simplify usage - broadcast unit test attachment-related updates in progress

--- a/templates/msgs/broadcast_scheduled_read.haml
+++ b/templates/msgs/broadcast_scheduled_read.haml
@@ -22,7 +22,7 @@
                   -plural
                     {{ count_comma }} recipients
               %td
-                {{ object.get_text }}
+                {{ translation.text }}
               %td.value-attachments{ style:"margin-top: 5px" }
                 -for attachment in translation.attachments
                   {% attachment_button attachment %}
