--- a/templates/contacts/contact_read_spa.haml
+++ b/templates/contacts/contact_read_spa.haml
@@ -105,7 +105,7 @@
 -block spa-title
   #title-text.hidden
     {{title}}    
-  %temba-contact-name-fetch(contact="{{object.uuid}}" -temba-refreshed="handleContactRefreshed")
+  %temba-contact-name-fetch(contact="{{object.uuid}}" -temba-refreshed="handleContactRefreshed" showLoading)
 
 -block subtitle
   .summary.text-base.mt-1.-mb-4
