--- a/templates/msgs/broadcast_scheduled.haml
+++ b/templates/msgs/broadcast_scheduled.haml
@@ -18,12 +18,16 @@
               %td.value-contacts.field_phone
                 -include "includes/recipients.haml" with groups=object.groups.all contacts=object.contacts.all
 
-              %td.value-text.field_text
-                {{ translation.text }}
+              %td.w-full
+                .flex.flex-wrap.flex-end.items-center.justify-end
+                  .flex-grow.inline
+                    .value-text.field_text
+                      {{ translation.text }}
 
-              %td.value-attachments{ style:"margin-top: 5px" }
-                -for attachment in translation.attachments
-                  {% attachment_button attachment %}
+                -if translation.attachments
+                  .value-attachments{ style:"margin-top: 5px" }
+                    -for attachment in translation.attachments
+                      {% attachment_button attachment %}
                 
               %td.value-next
                 -if object.schedule.next_fire
