--- a/templates/msgs/broadcast_scheduled_read_spa.haml
+++ b/templates/msgs/broadcast_scheduled_read_spa.haml
@@ -24,11 +24,17 @@
                       {{ count_comma }} recipient
                     -plural
                       {{ count_comma }} recipients
-                %td
-                  {{ translation.text }}
-                %td.value-attachments{ style:"margin-top: 5px" }
-                  -for attachment in translation.attachments
-                    {% attachment_button attachment %}
+                      
+                %td.w-full
+                  .flex.flex-wrap.flex-end.items-center.justify-end
+                    .flex-grow.inline
+                      .value-text.field_text
+                        {{ translation.text }}
+                  -if translation.attachments
+                    .value-attachments{ style:"margin-top: 5px" }
+                      -for attachment in translation.attachments
+                        {% attachment_button attachment %}
+
                 %td
                   .text-right
                     %nobr
