--- a/templates/msgs/msg_outbox_spa.haml
+++ b/templates/msgs/msg_outbox_spa.haml
@@ -15,11 +15,17 @@
             %td.value-recipient
               .pt-1.inline-block
                 -include "includes/recipients.haml" with groups=broadcast.groups.all contacts=broadcast.contacts.all urns=broadcast.urns
-            %td.value-text.w-full
-              {{ translation.text }}
-            %td.value-attachments{ style:"margin-top: 5px" }
-              -for attachment in translation.attachments
-                {% attachment_button attachment %}
+
+            %td.w-full
+              .flex.flex-wrap.flex-end.items-center.justify-end
+                .flex-grow.inline
+                  .value-text.field_text
+                    {{ translation.text }}
+              -if translation.attachments
+                .value-attachments{ style:"margin-top: 5px" }
+                  -for attachment in translation.attachments
+                    {% attachment_button attachment %}
+                    
             %td.created_on
               %span.time
                 {% short_datetime broadcast.created_on %}
