--- a/templates/spa_page_menu.haml
+++ b/templates/spa_page_menu.haml
@@ -32,7 +32,8 @@
       var modaxOptions = {
         disabled: item.disabled,
         onSubmit: item.on_submit,
-        onRedirect: item.on_redirect
+        onRedirect: item.on_redirect,
+        id: item.modal_id
       }
       showModax(item.title, item.url, modaxOptions);
     }
