--- a/templates/tickets/ticket_list_spa.haml
+++ b/templates/tickets/ticket_list_spa.haml
@@ -1,5 +1,8 @@
 -extends "smartmin/list.html"
 -load smartmin i18n contacts compress
+
+-block page-header
+
 -block page-title
   {{ title }}
 
@@ -20,12 +23,17 @@
       transition-delay: 200ms;
     }
 
+    temba-contact-tickets {
+      margin-bottom: -0.5em;
+    }
+
     .empty {
       position: absolute;
       transition: all 200ms ease-in-out;
       transition-delay: 200ms;
       opacity: 0;
       padding: 3px 40px;
+      pointer-events: none;
     }
 
     .empty h2 {
@@ -38,12 +46,9 @@
       display: inline;
     }
 
-    temba-select[name='ticket-status'] {
-      margin-bottom: 1em;
-    }
-
     .ticket-list {
-      flex-basis: 300px; 
+      max-width: 460px;
+      flex-basis: 40%; 
       flex-grow: 0; 
       flex-shrink: 0;
       transition: all 200ms ease-in;
@@ -53,22 +58,56 @@
       height: 100%;
     }
     
-    @media only screen and (max-width: 850px) {
-      .ticket-list {
-        flex-basis: 200px; 
-      }
-
+    .spa-content {
+      // container-type: size;
     }
 
-    @media only screen and (max-width: 768px) {
+    .add-note, .assign-ticket {
+      --header-bg: rgb(255,249,194);
+      --header-text: #555;
+      --textarea-height: 5em;
+    }
+
+    @container (max-width: 540px) {
       .ticket-list {
-        flex-basis: 125px; 
+        flex-basis: 1em;
+        flex-shrink: 1;
+        max-width: inherit;
+        margin-bottom: 0.75em;
+        padding-bottom: 1em;
+        margin-right: -2em;
+        padding-right: 2em;
+      
       }
-      .widget-container {          
-        margin-top:16px !important;
-        padding-top:0px !important;
-        margin-bottom:-120px;
-        padding-bottom:120px;
+
+      .ticket-ui {
+        flex-direction: column;
+        margin: -0.5em !important;
+      }
+
+      temba-ticket-list {
+        max-height:7em;
+      }
+
+      temba-contact-tickets {
+        flex-grow: 1;
+        flex-shrink: 1;
+      }
+
+      temba-contact-name-fetch {
+        display: none;
+      }
+
+      .chat-pane {
+        margin-left: 0;
+        flex-grow: 2;
+        border: solid 0px red;
+        height: 100%;
+      }
+
+      .menu-flex {
+        flex-direction: row-reverse;
+        
       }
     }
 
@@ -116,9 +155,31 @@
       }                    
     }
 
+    function handleFlowStarted(event) {
+
+      var name = document.querySelector("temba-contact-name-fetch");
+      name.refresh();
+
+      // give our flow a chance to start
+      window.setTimeout(function(){
+        // refresh the main menu
+        refreshMenu();
+  
+        // grab our latest chat
+        var chat = document.querySelector("temba-contact-chat");
+        chat.refresh();
+  
+        // refresh our content menu too
+        var contentMenu = document.querySelector("temba-content-menu");
+        contentMenu.refresh();
+      }, 2000);
+
+    }
+
     function updateTicketList() {   
 
       var tickets = document.querySelector("temba-ticket-list");
+      var contactTickets = document.querySelector("temba-contact-tickets");
       var chat = document.querySelector("temba-contact-chat");
 
       // if we have auto selecting, dont clear the chat
@@ -138,8 +199,7 @@
       }
     }
 
-
-    function handleStatusChanged(e) {
+    function handleStatusFilterChanged(e) {
       ticketUUID = null;
       focusNext = null;
       status = event.target.values[0].value
@@ -155,10 +215,17 @@
     function handleContactChanged(event) {
       var contact = event.target.getSelection();
 
+      var contactHeader = document.querySelector("temba-contact-name-fetch");
+      var contactTickets = document.querySelector("temba-contact-tickets");
       var chat = document.querySelector("temba-contact-chat");
+      
       if (contact) {
         chat.contact = contact.uuid;
         chat.currentTicket = contact.ticket;
+
+        contactTickets.ticket = contact.ticket.uuid;
+        contactTickets.contact = contact.uuid;
+        contactHeader.contact = contact.uuid;
 
         var filterNote = document.querySelector(".filter-note");
         if (filterNote) {
@@ -174,6 +241,9 @@
         chat.contact = null;
         chat.currentTicket = null;
         chat.currentContact = null;
+        contactTickets.contact = null;
+        contactTickets.ticket = null;
+        contactHeader.contact = null;
       }
       
       updateTicketList();
@@ -190,18 +260,12 @@
         show += "/";
       }
 
+      var contentMenu = document.querySelector("temba-content-menu");
+      contentMenu.endpoint = show;
       window.history.replaceState({ url: `/ticket/${path}`, show: show } ,"", show);
       
     }
     
-    function handleContactHistoryUpdated(event) {
-      // tell our list to refresh since we know things happened
-      var tickets = document.querySelector("temba-ticket-list");
-      if (tickets) {
-        tickets.refresh();
-      }
-    }
-
     function handleTicketsRefreshed(event) {
       // var menu = document.querySelector('temba-menu');
       var tickets = event.target;
@@ -232,43 +296,63 @@
       tickets.removeItem(uuid);
     }
     
-    function handleTicketUpdated(event) {
-      var ticket = event.detail.ticket;
-      var menu = document.querySelector('temba-menu');
-      var statusSelect = document.querySelector('temba-select[name="ticket-status"]');
-      var tickets = document.querySelector("temba-ticket-list");
+    function handleTicketAssigned() {
+      var contactTickets = document.querySelector("temba-contact-tickets");
+      contactTickets.refresh();
       var chat = document.querySelector("temba-contact-chat");
-      var folder = menu.selection[menu.selection.length - 1];
-      
-      // current agent took a ticket
-      if (ticket.assigned == 'self') {
-        menu.clickItem("mine");
-        updateTicketList();
-      } 
-      // unassigning an assigned ticket
-      else if (ticket.assigned != "self" && folder == "mine") {
-        removeTicket(ticket.uuid);
-      }
-      // assigning an unassigned ticket
-      else if (ticket.assigned && folder == "unassigned") {
-        removeTicket(ticket.uuid);
-      }
+      chat.refresh();
+    }
 
-      // ticket was reopened
-      else if (ticket.status == "open") {
-        chat.contactUUID = null;
-        chat.currentTicket = null;
-        chat.currentContact = null;
-        focusNext = ticket.uuid;
-        statusSelect.setSelection("open");
-      } 
-      // ticket was closed
-      else if (ticket.status == "closed") {
-        removeTicket(ticket.uuid);
-      } else {
-        tickets.refresh();
+    function handleNoteAdded() {
+      var chat = document.querySelector("temba-contact-chat");
+      chat.refresh();
+    }
+
+    function handleTicketUpdated(event) {
+      if (event.detail.data) {
+        var ticket = event.detail.data[0];
+
+        if (ticket && event.detail.previous && ticket.uuid == event.detail.previous[0].uuid) {
+          var previous = event.detail.previous[0];
+          var menu = document.querySelector('temba-menu');
+          var statusSelect = document.querySelector('temba-select[name="ticket-status"]');
+          var tickets = document.querySelector("temba-ticket-list");
+          var contactTickets = document.querySelector("temba-contact-tickets");
+          var chat = document.querySelector("temba-contact-chat");
+          var folder = menu.selection[menu.selection.length - 1];
+          
+          if (ticket.assignee && !previous.assignee && folder == 'unassigned') {
+            removeTicket(ticket.uuid);
+          }
+
+          // current agent took a ticket
+          if (ticket.assignee && ticket.assignee.email == '{{request.user.email}}') {
+            updateTicketList();
+          } 
+          // unassigning an assigned ticket
+          else if ((!ticket.assignee || ticket.assignee.email != '{{request.user.email}}') && folder == "mine" && previous.assignee) {
+            removeTicket(ticket.uuid);
+          }
+    
+          // ticket was reopened
+          else if (ticket.status == "open" && previous.status != "open") {
+            chat.contactUUID = null;
+            chat.currentTicket = null;
+            chat.currentContact = null;
+            contactTickets.ticket = null;
+            contactTickets.contact = null;
+            focusNext = ticket.uuid;
+            statusSelect.setSelection("open");
+          } 
+          // ticket was closed
+          else if (ticket.status == "closed" && previous.status != "closed") {
+            removeTicket(ticket.uuid);
+          } else {
+            tickets.refresh();
+          }
+          refreshMenu();
+        }
       }
-      refreshMenu();
     }
 
 
@@ -279,13 +363,13 @@
 -block content
   .flex.flex-col.overflow-y-auto.overflow-x-hidden.rounded-b-lg.p-8.-m-8.pb-4.flex-grow
     .page.flex-grow.flex.flex-col.min-h-0
-      .flex.widget-container(style="{% if is_spa%}position:relative;z-index:0;margin:0;padding:0;height:100%{%else%}height:100vh; margin-top:-121px;padding-top:121px;margin-bottom:-100px;padding-bottom:100px;{%endif%}")
+      .flex.ticket-ui(style="{% if is_spa%}position:relative;z-index:0;margin:0;padding:0;height:100%{%else%}height:100vh; margin-top:-121px;padding-top:121px;margin-bottom:-100px;padding-bottom:100px;{%endif%}")
         -if not is_spa
           .folders
             %temba-menu(endpoint="{%url 'orgs.org_menu'%}" submenu="tickets" onchange="handleTicketsMenuChanged(event)" value="ticket/{{folder}}")
         
-        .ticket-list.flex.flex-col(class="{% if is_spa%} {% else %}m-4 pt-4 mr-2{%endif%}")
-          %temba-select(name="ticket-status" onchange="handleStatusChanged(event)" value="{{status}}")
+        .ticket-list.flex.flex-col.bg-gray-200.border-r.border-b(class="{% if is_spa%}-ml-5 pl-5 -mt-5 pt-5 pr-4{% else %}m-4 pt-4 mr-2{%endif%}")
+          %temba-select.mb-2(name="ticket-status" onchange="handleStatusFilterChanged(event)" value="{{status}}")
             %temba-option(name="Open" value="open" icon="icon.tickets_open")
             %temba-option(name="Closed" value="closed" icon="icon.tickets_closed")
 
@@ -298,7 +382,7 @@
             -else
               %temba-ticket-list.flex-grow(nextselection="{{nextUUID}}" agent="{{request.user.email}}" endpoint="{% url 'tickets.ticket_folder' folder status %}" -temba-refreshed="handleTicketsRefreshed" onchange="handleContactChanged(event)")
 
-        .flex-grow.flex-col.flex.min-h-0(class="{% if is_spa %}ml-4{%else%}py-4 pb-4 pr-4{% endif %}")
+        .chat-pane.flex-grow.flex-col.flex.min-h-0(class="{% if is_spa %}ml-4{%else%}py-4 pb-4 pr-4{% endif %}")
           .empty
             -if has_tickets
               %h2
@@ -325,4 +409,11 @@
                   Sometimes an automated chatbot isn't enough. When your contacts need to chat with a real person, you can use the
                   Open Ticket action to open a new ticket.
 
-          %temba-contact-chat.shadow.mb-6(agent="{{request.user.email}}" -temba-refreshed="handleContactHistoryUpdated" -temba-content-changed="handleTicketUpdated" monitor="true" toolbar="true")
+
+          .flex.flex-col.menu-flex
+            .flex
+              %temba-contact-name-fetch.text-2xl.mb-4.flex-grow
+              -include "spa_page_menu.haml"
+            %temba-contact-tickets.mb-1(agent="{{request.user.email}}" -temba-refreshed="handleTicketUpdated")
+          
+          %temba-contact-chat.shadow.mb-6(agent="{{request.user.email}}" monitor="true")
