--- a/templates/contacts/contact_read_spa.haml
+++ b/templates/contacts/contact_read_spa.haml
@@ -12,10 +12,6 @@
       font-size: 1.1em;
     }
 
-    temba-contact-tikets:hover {
-      background: pink !important;
-    }
-
 -block extra-script
   :javascript
     function contactUpdated() {
@@ -92,11 +88,16 @@
       fetchURL("/contact/?search=" + encodeURIComponent(evt.detail.key) + "+%3D+" + encodeURIComponent("\"" + evt.detail.value + "\""))
     }
 
+    function handleTicketClicked(evt) {
+      var ticket = evt.detail.ticket;
+      gotoURL("/ticket/all/" + ticket.status + "/" + ticket.uuid + "/");
+    }
+
     function handlePendingClicked(evt) {
       var pending = evt.detail;
       
       if (pending.type == "campaign_event") {
-        gotoURL("/campaign/read/" + pending.campaign.uuid);
+        gotoURL("/campaign/read/" + pending.campaign.uuid + "/");
       } else {
         gotoURL("/broadcast/scheduled/");
       }
@@ -141,7 +142,7 @@
 
     %temba-tab(icon="icon.tickets" name='{{_("Tickets")|escapejs}}')    
       .flex.flex-grow.flex-col.overflow-y-auto(style="border-top-right-radius: var(--curvature);")
-        %temba-contact-tickets(contact="{{object.uuid}}" -temba-refreshed="handleTicketsRefreshed")
+        %temba-contact-tickets.m-4(contact="{{object.uuid}}" -temba-refreshed="handleTicketsRefreshed" clickable="true" -temba-button-clicked="handleTicketClicked")
           .no-tickets.p-16.text-center(slot="empty")
             .text-xl.mb-4
               -trans "No Tickets"
