Link contact name on tickets to the contact page if permitted

--- a/static/css/tailwind.css
+++ b/static/css/tailwind.css
@@ -630,6 +630,10 @@ a:hover {
     text-decoration: underline;
   }
 
+.clickable {
+  cursor: pointer;
+}
+
 .linked {
   cursor: pointer;
   color: rgb(var(--primary-rgb));
